# spectre

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy-to-cloudflare-pages.yaml
assets/shaders/: instancing.wgsl
benches/: spectre_cluster_bench.rs  super_spectre_bench.rs
src/: angle.rs  camera.rs  controller.rs  geometry.rs  hex_value.rs  hex_vec.rs  instancing.rs  instancing.wgsl  lib.rs  main.rs  spectre.rs  spectre_like.rs  spectres_manager.rs  utils.rs
src/geometry/: aabb.rs  cluster.rs  mystic.rs  mystic_cluster.rs  mystic_like.rs  skeleton.rs  spectre.rs  spectre_cluster.rs  spectre_iter.rs  spectre_like.rs  super_spectre.rs
src/tiles/: mystic_cluster.rs  mystic_like.rs  skeleton.rs  spectre_cluster.rs  spectre_iter.rs  spectre_like.rs
src/utils/: aabb.rs  angle.rs  hex_value.rs  hex_vec.rs
