[package]
name = "spectre"
version = "0.1.0"
edition = "2024"

[dependencies]
mikage = { git = "https://github.com/necocen/mikage.git", tag = "v0.3.2", features = ["webgl"] }
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.21.0", features = ["derive"] }
lyon_tessellation = "1.0.15"
tracing = "0.1.41"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "spectre_cluster_bench"
harness = false

[profile.release-wasm]
panic = "abort"
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
